--- a/hrm_chamcong/views/datn_chamcong.xml
+++ b/hrm_chamcong/views/datn_chamcong.xml
@@ -1,24 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="datn_hr_chamcong_reload_form" model="ir.ui.view">
-            <field name="name">datn.hr.chamcong.reload.form</field>
-            <field name="model">datn.hr.chamcong</field>
-            <field name="arch" type="xml">
-                <form>
-                    <sheet>
-                        <group>
-                            <group>
-                                <field name="name" readonly="1"/>
-                            </group>
-                            <group>
-                                <field name="day_reload" required="1"/>
-                            </group>
-                        </group>
-                    </sheet>
-                </form>
-            </field>
-        </record>
+
 
         <record id="datn_hr_chamcong_tree" model="ir.ui.view">
             <field name="name">Bảng chấm công tháng</field>
@@ -37,48 +20,14 @@
             </field>
         </record>
 
-        <record id="datn_hr_chamcong_form" model="ir.ui.view">
-            <field name="name">Bảng chấm công tháng</field>
-            <field name="model">datn.hr.chamcong</field>
-            <field name="arch" type="xml">
-                <form class="bangchamcong fixed-scrollbar">
 
-                    <group invisible="1">
-                        <field name="name" string="Tên bảng chấm công" invisible="1"/>
-<!--                               attrs="{'readonly': [('state', '=', 'confirmed')]}"/>-->
-                    </group>
-                    <group>
-                        <field name="department_id"
-                               options="{'no_quick_create': 1, 'no_create_edit': 1, 'no_open': 1, 'no_create': 1}"/>
-                    </group>
-
-                    <group invisible="1">
-                        <group class="date_cc">
-                            <label for="date_from" string="Chu kỳ chấm công"/>
-                            <div>
-                                <field name="date_from" attrs="{'readonly': [('state', '=', 'confirmed')]}"
-                                       class="date1 oe_inline"/>
-                                -
-                                <field name="date_to" attrs="{'readonly': [('state', '=', 'confirmed')]}"
-                                       class="date2 oe_inline"/>
-                            </div>
-                        </group>
-                        <group>
-                        </group>
-                    </group>
-                    <group>
-                        <group>
-                            <field name="month_year_chuky" class="oe_inline" widget="month_year"/>
-<!--                                   attrs="{'readonly': [('state','=','confirmed')]}"/>-->
-                        </group>
-                        <group>
-                            <field name="create_date" widget="date" string="Ngày tạo"
-                                   attrs="{'invisible': [('id','=',False)]}"
-                                   style="max-width: 200px;" readonly="1" force_save="1"/>
-                        </group>
-                    </group>
-                </form>
-            </field>
+        <record id="chamcong" model="ir.actions.act_window">
+            <field name="name">Chấm công</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">datn.hr.chamcong</field>
+            <field name="view_mode">tree,form</field>
+            <field name="view_ids" eval="[(5, 0, 0),
+                (0, 0, {'view_mode': 'tree', 'view_id': ref('datn_hr_chamcong_tree')})]"/>
         </record>
 
     </data>
