--- a/hrm_chamcong/views/menu_item.xml
+++ b/hrm_chamcong/views/menu_item.xml
@@ -8,6 +8,7 @@
               name='Chấm công tháng'
               parent="menu_chamcong"
               sequence="1"
+              action="chamcong"
               groups="hrm_user_demo">
     </menuitem>
 
