--- a/hrm_chamcong/views/menu_item.xml
+++ b/hrm_chamcong/views/menu_item.xml
@@ -1,14 +1,21 @@
 <odoo>
 
-     <menuitem id="menu_chamcong" name="Quản lý chấm công"
+    <menuitem id="menu_chamcong" name="Quản lý chấm công"
                parent="hrm.menu_field" sequence="4"
                groups="hrm_user_demo">
-     </menuitem>
+    </menuitem>
     <menuitem id="menu_item_chamcong"
               name='Chấm công tháng'
               parent="menu_chamcong"
               sequence="1"
-              action="chamcong"
+              action="datn_hr_chamcong_action"
+              groups="hrm_user_demo">
+    </menuitem>
+    <menuitem id="menu_item_checkin_checkout"
+              name='Checkin checkout'
+              parent="menu_chamcong"
+              sequence="2"
+              action="datn_hr_checkin_checkout_action"
               groups="hrm_user_demo">
     </menuitem>
 
