--- a/hrm_chamcong/views/menu_item.xml
+++ b/hrm_chamcong/views/menu_item.xml
@@ -2,21 +2,21 @@
 
     <menuitem id="menu_chamcong" name="Quản lý chấm công"
                parent="hrm.menu_field" sequence="4"
-               groups="hrm_user_demo">
+               groups="hrm.hrm_group_config_access,hrm.hrm_group_own_edit,hrm.hrm_group_read_only,hrm.hrm_group_create_edit">
     </menuitem>
     <menuitem id="menu_item_chamcong"
               name='Chấm công tháng'
               parent="menu_chamcong"
               sequence="1"
               action="datn_hr_chamcong_action"
-              groups="hrm_user_demo">
+              groups="hrm.hrm_group_config_access,hrm.hrm_group_create_edit">
     </menuitem>
     <menuitem id="menu_item_checkin_checkout"
               name='Checkin checkout'
               parent="menu_chamcong"
               sequence="2"
               action="datn_hr_checkin_checkout_action"
-              groups="hrm_user_demo">
+              groups="hrm.hrm_group_config_access,hrm.hrm_group_read_only,hrm.hrm_group_create_edit">
     </menuitem>
 
 </odoo>
