--- a/hrm_chamcong/views/datn_hrm_le_tet.xml
+++ b/hrm_chamcong/views/datn_hrm_le_tet.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-
-        <record id="datn_hr_le_tet_tree" model="ir.ui.view">
+        <record id="datn_hrm_le_tet_tree" model="ir.ui.view">
             <field name="name">Quản lý lễ tết</field>
-            <field name="model">datn.hr.le.tet</field>
+            <field name="model">datn.hrm.le.tet</field>
             <field name="arch" type="xml">
                 <tree class="widget-khoi-tree"
                       decoration-info="state=='draft'"
@@ -17,20 +16,20 @@
             </field>
         </record>
 
-        <record id="datn_hr_le_tet_form" model="ir.ui.view">
+        <record id="datn_hrm_le_tet_form" model="ir.ui.view">
             <field name="name">Quản lý lễ tết</field>
-            <field name="model">datn.hr.le.tet</field>
+            <field name="model">datn.hrm.le.tet</field>
             <field name="arch" type="xml">
                 <form>
                     <header>
                         <button string="Xác nhận" name="action_confirmed" type="object" states="draft"
-                                class="oe_highlight" groups="hrm.hrm_group_config_access"/>
+                                class="oe_highlight"/>
                         <button string="Soạn thảo" name="action_draft" type="object"
-                                states="confirmed" groups="hrm.hrm_group_config_access"/>
+                                states="confirmed"/>
                         <field name="state" widget="statusbar"/>
                     </header>
                     <group>
-                        <field name="name" required="1"></field>
+                        <field name="name" required="1"/>
                     </group>
                     <group>
                         <group>
@@ -94,26 +93,26 @@
             </field>
         </record>
 
-        <record id="datn_hr_le_tet_search" model="ir.ui.view">
-            <field name="name">Quản lý lễ tết</field>
-            <field name="model">datn.hr.le.tet.line</field>
-            <field name="arch" type="xml">
-                <search>
-                    <field name="employee_id"/>
-                     <group expand="0" string="Group By">
-                        <filter name="employee_id" string="Nhân viên" domain="[]" context="{'group_by':'employee_id'}"/>
-                        <filter string="Khối" name="block_id" domain="[]" context="{'group_by':'block_id'}"/>
-                    </group>
-                </search>
-            </field>
-        </record>
+<!--        <record id="datn_hrm_le_tet_search" model="ir.ui.view">-->
+<!--            <field name="name">Quản lý lễ tết</field>-->
+<!--            <field name="model">datn.hrm.le.tet.line</field>-->
+<!--            <field name="arch" type="xml">-->
+<!--                <search>-->
+<!--                    <field name="employee_id"/>-->
+<!--                     <group expand="0" string="Group By">-->
+<!--                        <filter name="employee_id" string="Nhân viên" domain="[]" context="{'group_by':'employee_id'}"/>-->
+<!--                        <filter string="Khối" name="block_id" domain="[]" context="{'group_by':'block_id'}"/>-->
+<!--                    </group>-->
+<!--                </search>-->
+<!--            </field>-->
+<!--        </record>-->
 
-        <record id="datn_hr_le_tet_action" model="ir.actions.act_window">
+        <record id="datn_hrm_le_tet_action" model="ir.actions.act_window">
             <field name="name">Quản lý lễ tết</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">datn.hr.le.tet</field>
+            <field name="res_model">datn.hrm.le.tet</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{'view_from_action': 'datn_hr_le_tet'}</field>
+            <field name="context">{'view_from_action': 'datn_hrm_le_tet'}</field>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">
                     Nhập các tiêu chí để tìm kiếm thông tin Quản lý lễ tết.
@@ -121,18 +120,18 @@
             </field>
         </record>
 
-        <record model="ir.actions.act_window.view" id="datn_hr_le_tet_tree_action">
+        <record model="ir.actions.act_window.view" id="datn_hrm_le_tet_tree_action">
             <field eval="1" name="sequence"/>
             <field name="view_mode">tree</field>
-            <field name="view_id" ref="datn_hr_le_tet_tree"/>
-            <field name="act_window_id" ref="datn_hr_le_tet_action"/>
+            <field name="view_id" ref="datn_hrm_le_tet_tree"/>
+            <field name="act_window_id" ref="datn_hrm_le_tet_action"/>
         </record>
 
-        <record model="ir.actions.act_window.view" id="datn_hr_le_tet_form_action">
+        <record model="ir.actions.act_window.view" id="datn_hrm_le_tet_form_action">
             <field eval="2" name="sequence"/>
             <field name="view_mode">form</field>
-            <field name="view_id" ref="datn_hr_le_tet_form"/>
-            <field name="act_window_id" ref="datn_hr_le_tet_action"/>
+            <field name="view_id" ref="datn_hrm_le_tet_form"/>
+            <field name="act_window_id" ref="datn_hrm_le_tet_action"/>
         </record>
     </data>
 </odoo>
