--- a/hrm_chamcong/views/menu_item.xml
+++ b/hrm_chamcong/views/menu_item.xml
@@ -19,6 +19,14 @@
               groups="hrm.hrm_group_config_access,hrm.hrm_group_read_only,hrm.hrm_group_create_edit">
     </menuitem>
 
+    <menuitem id="menu_item_cong_tang_cuonh"
+              name='Công tăng cường'
+              parent="menu_chamcong"
+              sequence="3"
+              action="datn_cong_tang_cuong_action"
+              groups="hrm.hrm_group_config_access,hrm.hrm_group_create_edit">
+    </menuitem>
+
     <menuitem id="menu_quanly_letet_thuong" name="Quản lý nghỉ, thưởng"
                parent="hrm.menu_field" sequence="5"
                groups="base.group_user">
