--- a/hrm_chamcong/views/datn_create_view_pheduyet.xml
+++ b/hrm_chamcong/views/datn_create_view_pheduyet.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="datn_loai_nghi_tree" model="ir.ui.view">
-            <field name="name">Cấu hình loại nghỉ</field>
-            <field name="model">datn.loai.nghi</field>
+        <record id="datn_phe_duyet_tree" model="ir.ui.view">
+            <field name="name">Cấu hình giao diện phê duyệt</field>
+            <field name="model">hr.request.type</field>
             <field name="arch" type="xml">
                 <tree editable="bottom" create="true">
-                    <field name="name"/>
+                    <field name="name" required="1"/>
                     <field name="code" required="1"/>
-                    <field name="loai_nghi" required="1"/>
-                    <field name="ngay_toi_da" required="1"/>
-                    <field name="ngay_ap_dung"/>
-                    <field name="trang_thai_ap_dung"/>
-                    <field name="note"/>
+                    <field name="image" required="1"/>
+                    <field name="is_active"/>
+                    <field name="index"/>
+                     <field name="description"/>
                 </tree>
             </field>
         </record>
@@ -31,24 +30,24 @@
 <!--            </field>-->
 <!--        </record>-->
 
-        <record id="datn_loai_nghi_action" model="ir.actions.act_window">
-            <field name="name">Cấu hình loại nghỉ</field>
+        <record id="datn_phe_duyet_action" model="ir.actions.act_window">
+            <field name="name">Cấu hình giao diện phê duyệt</field>
             <field name="type">ir.actions.act_window</field>
-            <field name="res_model">datn.loai.nghi</field>
+            <field name="res_model">hr.request.type</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{'view_from_action': 'datn_loai_nghi'}</field>
+            <field name="context">{'view_from_action': 'hr_request_type'}</field>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">
-                    Chưa có cấu hình loại nghỉ nào, Hãy tạo một cấu hình loại nghỉ.
+                    Chưa có cấu hình giao diện phê duyệt nào, Hãy tạo một cấu hình giao diện phê duyệt.
                 </p>
             </field>
         </record>
 
-        <record model="ir.actions.act_window.view" id="datn_loai_nghi_tree_action">
+        <record model="ir.actions.act_window.view" id="datn_phe_duyet_tree_action">
             <field eval="1" name="sequence"/>
             <field name="view_mode">tree</field>
-            <field name="view_id" ref="datn_loai_nghi_tree"/>
-            <field name="act_window_id" ref="datn_loai_nghi_action"/>
+            <field name="view_id" ref="datn_phe_duyet_tree"/>
+            <field name="act_window_id" ref="datn_phe_duyet_action"/>
         </record>
     </data>
 </odoo>
