--- a/hrm_chamcong/views/datn_checkin_checkout.xml
+++ b/hrm_chamcong/views/datn_checkin_checkout.xml
@@ -10,6 +10,7 @@
                       decoration-info="state=='draft'"
                       default_order="block_id">
                     <field name="block_id"/>
+                    <field name="name"/>
                     <field name="date_from"/>
                     <field name="date_to"/>
                     <field name="state"/>
@@ -24,9 +25,9 @@
                 <form>
                     <header>
                         <button string="Xác nhận" name="action_confirmed" type="object" states="draft"
-                                class="oe_highlight" groups="hrm.hrm_group_create_edit"/>
+                                class="oe_highlight" groups="hrm_chamcong.hrm_quyen_hr"/>
                         <button string="Soạn thảo" name="action_draft" type="object"
-                                states="confirmed" groups="hrm.hrm_group_create_edit"/>
+                                states="confirmed" groups="hrm_chamcong.hrm_quyen_hr"/>
                         <field name="state" widget="statusbar"/>
                     </header>
                     <group>
@@ -104,14 +105,13 @@
 
         <record id="datn_hr_checkin_checkout_search" model="ir.ui.view">
             <field name="name">Bảng CheckIn CheckOut</field>
-            <field name="model">datn.hr.checkin.checkout.line</field>
+            <field name="model">datn.hr.checkin.checkout</field>
             <field name="arch" type="xml">
                 <search>
-                    <field name="employee_id"/>
-                    <field name="day"/>
-                     <group expand="0" string="Group By">
-                        <filter name="employee_id" string="Nhân viên" domain="[]" context="{'group_by':'employee_id'}"/>
-                        <filter string="ngày" name="day" domain="[]" context="{'group_by':'day'}"/>
+                    <field name="name" filter_domain="['|', ('name','ilike',self), ('ref','ilike',self)]" string="Tên"/>
+                    <group expand="0" string="Group By">
+                        <filter name="date_from" string="Tháng" domain="[]" context="{'group_by':'date_from'}"/>
+                        <filter name="block_id" string="Khối" domain="[]" context="{'group_by':'block_id'}"/>
                     </group>
                 </search>
             </field>
@@ -122,7 +122,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">datn.hr.checkin.checkout</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{'view_from_action': 'datn_hr_checkin_checkout'}</field>
+            <field name="context">{'search_default_date_from':1, 'search_default_block_id':1, 'view_from_action': 'datn_hr_checkin_checkout'}</field>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">
                     Nhập các tiêu chí để tìm kiếm thông tin Bảng checkin checkout.
