--- a/hrm_chamcong/views/datn_loai_nghi.xml
+++ b/hrm_chamcong/views/datn_loai_nghi.xml
@@ -36,7 +36,7 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">datn.loai.nghi</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{'view_from_action': 'datn_loai_nghi'}</field>
+            <field name="context">{'view_from_action': 'datn_loai_phe_duye'}</field>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">
                     Chưa có cấu hình loại nghỉ nào, Hãy tạo một cấu hình loại nghỉ.
