--- a/hrm_chamcong/views/datn_chamcong.xml
+++ b/hrm_chamcong/views/datn_chamcong.xml
@@ -25,9 +25,9 @@
                 <form class="bangchamcong fixed-scrollbar">
                     <header>
                         <button string="Xác nhận" name="action_confirmed" type="object" states="draft"
-                                class="oe_highlight" groups="hrm_chamcong.hrm_quyen_hr"/>
+                                class="oe_highlight oe_edit_only" groups="hrm_chamcong.hrm_quyen_hr"/>
                         <button string="Soạn thảo" name="action_draft" type="object"
-                                states="confirmed" groups="hrm_chamcong.hrm_quyen_hr"/>
+                                states="confirmed" groups="hrm_chamcong.hrm_quyen_hr" class="oe_edit_only"/>
                         <button string="Tải dữ liệu" groups="hrm_chamcong.hrm_quyen_hr" name="action_loaddata" type="object" class="oe_edit_only oe_highlight"/>
                         <field name="state" widget="statusbar"/>
                     </header>
