up employee_code 29/11

--- a/hrm/views/hr_employee_view.xml
+++ b/hrm/views/hr_employee_view.xml
@@ -11,7 +11,7 @@
                         </group>
                         <group col="2">
                             <group>
-                                <field name="employee_code"/>
+                                <field name="employee_code" readonly="1" force_save="1"/>
                                 <field name="name" required="1"/>
                                 <field name="birthday"/>
                                 <field name="gender"/>
